
5.2a2 -> 5.2a3:
    - proyvind: rpm4compat: disable warnings about unused variables.
    - proyvind: Mandriva: Always treat file conflicts during install (rpm -i)
	 as errors. (dont-filter-install-file-conflicts)
    - proyvind: perl: clean out some mess.
    - proyvind: perl: don't add rpath to module.
    - proyvind: lua: fix linking against internal lua.
    - jbj: perl: add a sentinel to rpmdsSingle() rather than exporting rpmdsDup().
    - jbj: fix: better choice for paths to add (#473814 comment #4).
    - proyvind: perl: add api doc for RPM::Spec->icon() & RPM::Spec->icon_url().
    - jbj: fix: include build dirname to find multiple *.pc (#473814).
    - proyvind: perl: always do initSourceHeader() (fixes RPM::Spec->srcheader()
	& RPM::SPEC->check()).
    - jbj: lua: inline a copy of getdate.c
    - jbj: lua: change paths to extend lua with external modules on linux.
    - jbj: WR: lua: display "rpm:lua:foo" progname w chkconfig/useradd/groupadd
	errors.
    - jbj: WR: fix: sqlite assertion failure while sequentially retrieving keys.
    - bero: Ark: create --with-vendor=ark, borrow some Mandriva patches, add
        use-gnu-tar-compression-detection patch for vendor ark
    - jbj: eliminate --with-vendor arguments that are not in use.
    - jbj: eliminate rpmal debugging code.
    - jbj: lua: disable mkdtemp(3) bindings, no solaris portability atm.
    - jbj: lua: bind mkdtemp(3) in lposix.c
    - jbj: macros: add %{mkdtemp:...} primitive (consistent leading whitespace too).
    - jbj: devtool: provision a fedora host sufficiently to build from cvs.
    - jbj: add cudf-tests example packaging.
    - jbj: include tests/*.src.rpm, exclude tests/ref/CVS/*, with "make dist".
    - proyvind: lua: explicitly link against libexpat as assumption on implicit
	linking cannot be guaranteed.
    - proyvind: add --with-extra-path-macros configure option that adds
	 additional macro file paths without overriding existing defaults.